<resources>
    <string name="app_name">pureLrc</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Ana Sayfa</string>
    <string name="menu_about">Hakkında</string>
    <string name="menu_exit">Çıkış</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="boo">boo</string>
    <string name="search_hint">Search</string>
    <string name="search_advice">搜索建议</string>
    <string name="search_history">搜索历史</string>
    <string name="search_record">搜索记录</string>
    <string name="search_favorite">收藏</string>
</resources>
