<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_clearButton="true"
        android:textAllCaps="false"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:singleLine="true" />

    <TextView
        android:id="@+id/search_hint_fixed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_advice" />

    <am.widget.wraplayout.WrapLayout
        android:id="@+id/search_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="10dp">
    </am.widget.wraplayout.WrapLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:id="@+id/search_history_fixed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_normal"
            android:text="@string/search_history" />
        <ImageView
            android:id="@+id/search_history_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/boo"
            android:src="@drawable/del"/>
    </LinearLayout>

    <am.widget.wraplayout.WrapLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="10dp">
    </am.widget.wraplayout.WrapLayout>

</LinearLayout>
